[package]
name = "fyisite"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
env_logger = "0.11.8"
headless_chrome = { git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = [
  "fetch",
] }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
