[package]
name = "fyisite"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.8"
futures-util = "0.3.31"
headless_chrome = { git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = [
  "fetch",
] }
log = "0.4.29"
reqwest = { version = "0.13.1", features = ["native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
toml = { version = "0.9.11", features = ["serde"] }
